WIP of new hint presentation for preferences: - Fix misalignment of middle field - Fix some of the tabs getting horizental scrollbar

--- a/preferences/templates/pixelegg/app.less
+++ b/preferences/templates/pixelegg/app.less
@@ -57,13 +57,15 @@ tr.prefRow > td {
 .prefHelp {
 	position: absolute;
     display: none;
-    width: 254px;
+    width: 250px;
     max-height: 99%;
     height: 97%;
     padding: 5px;
     margin-top: -4px;
     top: 0;
 	z-index: 1;
+	border: 2px solid dimgrey;
+    border-radius: 5px;
 }
 .prefHelpColumn {border-left:1px solid #e6e6e6 !important;}
 tr.prefRow:hover .prefHelp {
